<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_low_margin"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/editor_image"
                android:layout_width="@dimen/editor_image_width"
                android:layout_height="@dimen/editor_image_height" />

            <Button
                android:id="@+id/editor_add_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editor_add_image_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_low_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/inventory_item_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_name_edit_text_hint" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/inventory_item_price_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_price_edit_text_hint"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/default_high_margin"
                    android:text="@string/dollar_sign" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/inventory_item_quantity_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/editor_quantity"
                    android:inputType="number" />

                <Button
                    android:id="@+id/quantity_decrease"
                    android:layout_width="@dimen/quantity_button_dimension"
                    android:layout_height="@dimen/quantity_button_dimension"
                    android:text="-"/>

                <Button
                    android:id="@+id/quantity_increase"
                    android:layout_width="@dimen/quantity_button_dimension"
                    android:layout_height="@dimen/quantity_button_dimension"
                    android:text="+"/>

            </LinearLayout>

            <EditText
                android:id="@+id/order_more_from_supplier_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_email" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/order_more_from_supplier_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/default_low_margin"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_high_margin"
            android:text="@string/order_from_supplier_header_text"
            android:textAllCaps="true"
            android:textSize="@dimen/order_from_supplier_header_text_size" />

        <EditText
            android:id="@+id/order_more_from_supplier_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_high_margin"
            android:hint="@string/editor_quantity"
            android:inputType="number" />

        <Button
            android:id="@+id/order_more_quantity_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_high_margin"
            android:text="@string/order_more_button_text" />

    </LinearLayout>

</LinearLayout>
